[gd_scene load_steps=20 format=2]

[ext_resource path="res://ui_elements/gw2_ui/button-exit.png" type="Texture" id=1]
[ext_resource path="res://ui_elements/gw2_ui/emblem.png" type="Texture" id=2]
[ext_resource path="res://ui_elements/gw2_ui/titlebar-inactive.png" type="Texture" id=3]
[ext_resource path="res://ui_elements/gw2_ui/window-topright-active.png" type="Texture" id=4]
[ext_resource path="res://ui_elements/gw2_ui/background.png" type="Texture" id=5]
[ext_resource path="res://ui_elements/gw2_ui/button-exit-active.png" type="Texture" id=6]
[ext_resource path="res://ui_elements/gw2_ui/bottom-right.png" type="Texture" id=7]
[ext_resource path="res://ui_elements/gw2_ui/menu_background.gdshader" type="Shader" id=8]
[ext_resource path="res://ui_elements/gw2_ui/divider.png" type="Texture" id=9]
[ext_resource path="res://ui_elements/gw2_ui/menomoni_title.tres" type="DynamicFont" id=10]
[ext_resource path="res://ui_elements/gw2_ui/title.png" type="Texture" id=12]
[ext_resource path="res://ui_elements/gw2_ui/157109.png" type="Texture" id=13]
[ext_resource path="res://GW2Menu.gd" type="Script" id=14]
[ext_resource path="res://ui_elements/gw2_ui/157110.png" type="Texture" id=15]
[ext_resource path="res://ui_elements/gw2_ui/titlebar-active.png" type="Texture" id=16]
[ext_resource path="res://ui_elements/gw2_ui/selection.png" type="Texture" id=18]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/left_fade_end = 0.0
shader_param/left_fade_start = 0.071
shader_param/left_edge_end = 0.034
shader_param/left_edge_start = 0.071
shader_param/selected_start = 0.074
shader_param/selected_end = 0.131

[sub_resource type="Shader" id=3]
code = "// NOTE: Shader automatically converted from Godot Engine 3.4.4.stable's CanvasItemMaterial.
shader_type canvas_item;
render_mode blend_mix;

uniform float selected_start: hint_range(0.0, 1.0) = 0.074;
uniform float selected_end: hint_range(0.0, 1.0) = 0.131;

void fragment() {
	vec4 color = texture(TEXTURE, UV);

	if (UV.y > selected_start && UV.y < selected_end) {
		color.a=0.0;
	}
	

	COLOR=color;
}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/selected_start = 0.074
shader_param/selected_end = 0.131

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="GW2Menu" type="Control" parent="."]
margin_right = 1019.0
margin_bottom = 766.0
script = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}
button_textures = [ ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ) ]
button_hover_textures = [ ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ) ]
button_text = [ "Open Markers", "Save Markers", "Show Hide Markers", "Edit Markers", "Range Indicators", "Settings", "Super Secret Settings", "Exit Burrito" ]

[node name="Background" type="TextureRect" parent="GW2Menu"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -38.0
margin_top = 14.0
margin_right = 78.0
margin_bottom = 30.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="TitleBar" type="TextureButton" parent="GW2Menu"]
margin_left = 0.122452
margin_top = -8.69907
margin_right = 1024.12
margin_bottom = 55.3009
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="BottomRightCorner" type="TextureRect" parent="GW2Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.882
margin_top = -124.659
margin_right = 3.11816
margin_bottom = 3.34082
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="TopRightTitlebar" type="TextureRect" parent="GW2Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -107.23
margin_top = -7.73858
margin_right = 20.77
margin_bottom = 56.2614
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CloseButton" type="TextureButton" parent="GW2Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -39.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = 39.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Icon" type="TextureRect" parent="GW2Menu"]
margin_left = -26.7068
margin_top = -30.0703
margin_right = 101.293
margin_bottom = 97.9296
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SubTitle" type="RichTextLabel" parent="GW2Menu"]
margin_left = 180.722
margin_top = 13.133
margin_right = 331.722
margin_bottom = 38.133
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 10 )
text = "Open Markers"
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="TextureRect" parent="GW2Menu"]
margin_left = 76.7665
margin_top = 12.7493
margin_right = 158.767
margin_bottom = 52.7493
mouse_filter = 2
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Divider" type="TextureRect" parent="GW2Menu"]
material = SubResource( 4 )
margin_left = 27.425
margin_top = 14.0
margin_right = 59.425
margin_bottom = 794.0
mouse_filter = 2
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Selection" type="TextureRect" parent="GW2Menu"]
margin_left = -58.0
margin_top = 44.0
margin_right = 43.0
margin_bottom = 144.0
texture = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="Buttons" type="Control" parent="GW2Menu"]
__meta__ = {
"_edit_lock_": true
}

[connection signal="button_down" from="GW2Menu/TitleBar" to="GW2Menu" method="_on_TitleBar_button_down"]
[connection signal="button_up" from="GW2Menu/TitleBar" to="GW2Menu" method="_on_TitleBar_button_up"]
[connection signal="pressed" from="GW2Menu/CloseButton" to="GW2Menu" method="_on_CloseButton_pressed"]
